kustomize/dex-extra/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dex
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: dex
      app.kubernetes.io/name: dex
  policyTypes:
    - Egress
    - Ingress
  egress:
      # Allow to GitHub
    - ports:
      - port: 443
  # Dex is exposed via Ingress resource, allow access from everywhere
  ingress:
    - {}
